[package]
name = "neotwitch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
# futures-util = "0.3.17"
futures-util = { version = "0.3.16", features = ["sink"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tinylog = { path = "../tinylog" }
# tinyroute = { git = "https://github.com/togglebyte/tinyroute" }
tinyroute = { path = "../tinyroute" }
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }
